SaldoResponse to record